big scratch page improvements and fixes

--- a/frontend/src/components/Editor/MonacoEditor.module.scss
+++ b/frontend/src/components/Editor/MonacoEditor.module.scss
@@ -1,6 +1,5 @@
 .container {
     flex-grow: 1;
-    user-select: initial;
 
     /* fix border-radius overflow */
     overflow: hidden;
@@ -14,6 +13,14 @@
     /* weird box at top-left */
     & :global(.monaco-hover) {
         display: none;
+    }
+
+    & :global(.mac .monaco-mouse-cursor-text) {
+        cursor: text !important;
+    }
+
+    & :global(.view-lines) {
+        user-select: initial;
     }
 }
 
