--- a/frontend/src/components/diff/Diff.module.css
+++ b/frontend/src/components/diff/Diff.module.css
@@ -1,6 +1,5 @@
 .container {
     padding: 1rem;
-    overflow: auto;
     flex: 1;
 }
 
@@ -15,6 +14,7 @@
     font-family: monospace;
     font-size: var(--s-1);
     white-space: pre;
+    width: 100%;
 }
 
 .lineNumber {
