--- a/frontend/src/components/user/UserLink.module.css
+++ b/frontend/src/components/user/UserLink.module.css
@@ -1,17 +1,19 @@
 .user {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    gap: .5em;
+    gap: 6px;
 
-    padding: .6em;
-    padding-right: .9em;
-
-    color: var(--g1400);
+    padding: 0 6px;
 }
 
 .user:any-link {
     cursor: pointer;
+}
+
+.user:any-link:hover {
+    color: var(--g1700);
+    text-decoration: underline;
 }
 
 .avatar {
