--- a/frontend/src/pages/u/[username].module.css
+++ b/frontend/src/pages/u/[username].module.css
@@ -23,7 +23,7 @@
 .avatar {
     width: 64px;
     height: 64px;
-    background: #ffffff44;
+    background: #fff4;
     border-radius: 999px;
 }
 
