--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -22,10 +22,12 @@
     background: var(--g300);
 }
 
-.header:not([data-is-popup]), .container:not([data-is-popup]) {
+.header:not([data-is-popup]),
+.container:not([data-is-popup]) {
     border-radius: 0;
     background: transparent;
-    /*border-bottom: 1px solid var(--g400);*/
+
+    /* border-bottom: 1px solid var(--g400); */
 }
 
 .row {
@@ -49,14 +51,14 @@
     color: var(--frog-secondary);
 
     border-top-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 
     font-family: monospace;
-    font-size: .8rem;
+    font-size: 0.8rem;
 
-    padding: .6em 1em;
+    padding: 0.6em 1em;
 
     outline: none !important;
 }
@@ -68,7 +70,7 @@
 .flags {
     display: flex;
     flex-wrap: wrap;
-    gap: .5em;
+    gap: 0.5em;
     margin-top: 1em;
 }
 
@@ -76,7 +78,7 @@
     flex-grow: 1;
     display: inline-block;
     cursor: default;
-    padding: .75em;
+    padding: 0.75em;
     border-radius: 12px;
 
     border: 1px solid transparent;
@@ -88,8 +90,8 @@
 }
 
 .flag label {
-    font-size: .9rem;
-    margin-left: .5em;
+    font-size: 0.9rem;
+    margin-left: 0.5em;
 }
 
 .flag input {
@@ -109,13 +111,13 @@
     flex-direction: column;
 
     width: 20em;
-    border-radius: .5em;
+    border-radius: 0.5em;
 }
 
 .flagSetName {
     cursor: default;
-    font-size: .8rem;
-    padding: .6em 1em;
-    padding-bottom: .2em;
+    font-size: 0.8rem;
+    padding: 0.6em 1em;
+    padding-bottom: 0.2em;
     color: var(--g800);
 }
