--- a/frontend/src/components/diff/Diff.module.css
+++ b/frontend/src/components/diff/Diff.module.css
@@ -7,7 +7,8 @@
     border-spacing: 1em 0;
 }
 
-.diff, .log {
+.diff,
+.log {
     display: block;
     user-select: text;
     border: none;
@@ -23,23 +24,33 @@
     font-style: italic;
 }
 
-.immediate { color: #6D6DFF }
-.stack { color: #e3fc45 }
-.register { color: #e3fc45 }
-.delay_slot { font-weight: bold; color: #969896 }
-.diff_change { color: #6D6DFF }
-.diff_add { color: #45bd00 }
-.diff_remove { color: #c82829 }
-.source_filename { font-weight: bold }
-.source_function { font-weight: bold; text-decoration: underline }
-.source_other { font-style: italic }
-.source_line_num { font-style: italic }
-.rotation0 { color: magenta}
-.rotation1 { color: cyan }
-.rotation2 { color: rgb(0, 212, 0) }
-.rotation3 { color: red }
-.rotation4 { color: lightyellow }
-.rotation5 { color: lightpink }
-.rotation6 { color: lightcyan }
-.rotation7 { color: lightgreen }
-.rotation8 { color: grey }
+.immediate { color: #6d6dff; }
+.stack { color: #e3fc45; }
+.register { color: #e3fc45; }
+
+.delay_slot {
+    font-weight: bold;
+    color: #969896;
+}
+
+.diff_change { color: #6d6dff; }
+.diff_add { color: #45bd00; }
+.diff_remove { color: #c82829; }
+.source_filename { font-weight: bold; }
+
+.source_function {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.source_other { font-style: italic; }
+.source_line_num { font-style: italic; }
+.rotation0 { color: magenta; }
+.rotation1 { color: cyan; }
+.rotation2 { color: rgb(0, 212, 0); }
+.rotation3 { color: red; }
+.rotation4 { color: lightyellow; }
+.rotation5 { color: lightpink; }
+.rotation6 { color: lightcyan; }
+.rotation7 { color: lightgreen; }
+.rotation8 { color: grey; }
