--- a/frontend/src/components/scratch/Scratch.module.scss
+++ b/frontend/src/components/scratch/Scratch.module.scss
@@ -10,51 +10,17 @@
     overflow: hidden;
 }
 
-.context, .sourceCode {
+.context {
     display: flex;
     flex-direction: column;
 }
-
-.grow { flex: 1 }
 
 .diffSection {
     display: flex;
     flex-direction: column;
 
-    scrollbar-color: #ffffff33 transparent;
+    scrollbar-color: #fff3 transparent;
     scrollbar-width: thin;
-}
-
-.diffExplanation {
-    opacity: 0.3;
-}
-
-.output {
-    padding: 1em;
-    flex: 1;
-    overflow: auto;
-    user-select: text;
-}
-
-.metadata {
-    font-size: 0.8em;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem;
-    padding-left: 1rem;
-    gap: 1em;
-
-    color: var(--g1200);
-    cursor: default;
-}
-
-.metadata > div {
-    display: flex;
-    gap: 1ch;
-    align-items: center;
 }
 
 .chooseACompiler {
@@ -65,10 +31,6 @@
 .chooseACompilerActions {
     padding: 1em;
     align-self: center;
-}
-
-.scratchLink {
-    color: var(--g1400);
 }
 
 .editor {
@@ -108,14 +70,15 @@
 
     text-overflow: ellipsis;
 
-    transition: border-color .15s;
-
-    &:hover, &:active {
-        border-color: var(--g400);
-    }
+    transition: border-color 0.15s;
 
     &::-webkit-input-placeholder {
         color: var(--g800);
+    }
+
+    &:hover,
+    &:active {
+        border-color: var(--g400);
     }
 }
 
