--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -10,13 +10,15 @@
 
 html {
     font-size: 16px;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     line-height: 1.5;
     text-rendering: optimizeQuality;
     overflow: hidden;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     font-size: inherit;
     font-family: inherit;
@@ -39,7 +41,8 @@ body {
     position: relative;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
