--- a/frontend/src/pages/scratch/new.module.scss
+++ b/frontend/src/pages/scratch/new.module.scss
@@ -28,7 +28,7 @@
     > p {
         padding-top: 4px;
         color: var(--g1000);
-        font-size: .9em;
+        font-size: 0.9em;
         max-width: 50ch;
     }
 }
@@ -39,12 +39,12 @@
     padding: 10px;
 
     color: var(--g1700);
-    font-size: .9em;
+    font-size: 0.9em;
     font-weight: 600;
 
     small {
         color: var(--g800);
-        font-size: .8em;
+        font-size: 0.8em;
         font-weight: 400;
         padding-left: 8px;
     }
@@ -56,7 +56,7 @@
 
     color: var(--g1200);
     background: var(--g200);
-    font: .8em monospace;
+    font: 0.8em monospace;
     border: 1px solid var(--g500);
     border-radius: 4px;
 
@@ -109,7 +109,7 @@
             text-align: center;
 
             color: var(--g500);
-            font-size: .8rem;
+            font-size: 0.8rem;
 
             @media screen and (min-width: 400px) {
                 padding: 16px;
@@ -123,7 +123,7 @@
 }
 
 .compilerChoiceHeading {
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 2px 10px;
     color: var(--g800);
 }
