dont show scratch name input border if you cant edit it

--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -76,9 +76,11 @@
         color: var(--g800);
     }
 
-    &:hover,
-    &:active {
-        border-color: var(--g400);
+    &:not(:disabled) {
+        &:hover,
+        &:active {
+            border-color: var(--g400);
+        }
     }
 }
 
