--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -8,15 +8,19 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: .5em;
+    gap: 0.5em;
 
-    padding: 1vh 0.5vw;
+    padding: 4px;
 
     background: var(--g400);
     border-bottom: 1px solid var(--g600);
 
     font-size: 90%;
     font-weight: 600;
+
+    @media screen and (min-width: 800px) and (min-height: 800px) {
+        padding: 8px;
+    }
 }
 
 .item {
@@ -26,7 +30,7 @@
     height: 100%;
     padding: 0 8px;
 
-    opacity: 1.0;
+    opacity: 1;
 
     &:hover {
         opacity: 0.8;
@@ -36,7 +40,7 @@
 .logo {
     @extend .item;
 
-    margin: 0 .5vw;
+    margin: 0 0.5vw;
     padding: 0;
 
     svg {
@@ -46,11 +50,30 @@
     /* Frog blinks when you load the page or stop hovering */
     &:not(:hover) {
         @keyframes blink {
-            0% { transform: scaleY(1.0); opacity: 1 }
-            25% { transform: scaleY(0.1); opacity: 0 }
-            50% { transform: scaleY(1.0); opacity: 1 }
-            75% { transform: scaleY(0.1); opacity: 0 }
-            100% { transform: scaleY(1.0); opacity: 1 }
+            0% {
+                transform: scaleY(1);
+                opacity: 1;
+            }
+
+            25% {
+                transform: scaleY(0.2);
+                opacity: 0;
+            }
+
+            50% {
+                transform: scaleY(1);
+                opacity: 1;
+            }
+
+            75% {
+                transform: scaleY(0.2);
+                opacity: 0;
+            }
+
+            100% {
+                transform: scaleY(1);
+                opacity: 1;
+            }
         }
 
         :global(.frog_svg__pupilR),
@@ -58,7 +81,7 @@
         :global(.frog_svg__eyeR),
         :global(.frog_svg__eyeL) {
             transform-origin: 0 7px;
-            animation: blink .4s 2s ease;
+            animation: blink 0.4s 2s ease;
 
             @media (prefers-reduced-motion) {
                 animation: none;
@@ -69,8 +92,4 @@
 
 .grow {
     flex: 1;
-}
-
-.link:hover, .linkActive {
-    opacity: 0.8;
 }
