--- a/frontend/src/components/Tabs.module.scss
+++ b/frontend/src/components/Tabs.module.scss
@@ -3,11 +3,14 @@
     flex-direction: column;
 
     flex: 1;
+    height: 0;
 }
 
 .tabButtons {
     position: relative;
-    height: 48px;
+    min-height: 48px;
+    white-space: nowrap;
+    overflow-x: auto;
 
     border-bottom: 1px solid var(--a100);
 }
@@ -16,7 +19,7 @@
     position: relative;
 
     display: inline-flex;
-    gap: .5em;
+    gap: 0.5em;
     align-items: center;
     justify-content: center;
 
@@ -24,7 +27,7 @@
     min-width: 60px;
     height: 100%;
 
-    font-size: .8rem;
+    font-size: 0.8rem;
     font-weight: 500;
 
     user-select: none;
@@ -34,7 +37,7 @@
     background: transparent;
     border: 0;
 
-    transition: color .2s ease;
+    transition: color 0.2s ease;
 
     &:disabled {
         opacity: 0.7;
@@ -44,7 +47,8 @@
     &:not(:disabled) {
         cursor: pointer;
 
-        &:hover, &[aria-selected="true"] {
+        &:hover,
+        &[aria-selected="true"] {
             color: var(--a900);
         }
     }
@@ -80,7 +84,7 @@
 
     transition: transform, width;
 
-    // left, width, transition-duration, opacity set by JS
+    // transform, width, transition-duration, opacity set by JS
 
     // must be separate element for a different transition-duration
     &::after {
@@ -95,12 +99,13 @@
         border-radius: 4px;
 
         opacity: inherit;
-        transition: opacity .1s;
+        transition: opacity 0.1s;
     }
 }
 
 .tabPanel {
     flex: 1;
+    height: 0;
 
     display: none;
 
@@ -111,4 +116,5 @@
 
 .tabPanelContent {
     flex: 1;
+    overflow: hidden;
 }
