--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -10,28 +10,15 @@
 
 html {
     font-size: 16px;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     line-height: 1.5;
     text-rendering: optimizeQuality;
     overflow: hidden;
-
-    --ratio: 1.25;
-    --s-5: calc(var(--s-4) / var(--ratio));
-    --s-4: calc(var(--s-3) / var(--ratio));
-    --s-3: calc(var(--s-2) / var(--ratio));
-    --s-2: calc(var(--s-1) / var(--ratio));
-    --s-1: calc(var(--s0) / var(--ratio));
-    --s0: 1rem;
-    --s1: calc(var(--s0) * var(--ratio));
-    --s2: calc(var(--s1) * var(--ratio));
-    --s3: calc(var(--s2) * var(--ratio));
-    --s4: calc(var(--s3) * var(--ratio));
-    --s5: calc(var(--s4) * var(--ratio));
-    --s6: calc(var(--s5) * var(--ratio));
-    --s7: calc(var(--s6) * var(--ratio));
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     font-size: inherit;
     font-family: inherit;
@@ -48,13 +35,14 @@ body {
     background: var(--g300);
     color: var(--a800);
 
-    line-height: var(--ratio);
+    line-height: 1.25;
     overflow-x: hidden;
     user-select: none;
     position: relative;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -76,7 +64,7 @@ main {
 }
 
 ::selection {
-    background: #ffffff22;
+    background: var(--a100);
 }
 
 .routerProgressBar {
