--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -11,6 +11,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
+    cursor: default;
 }
 
 .container {
@@ -20,10 +22,12 @@
     background: var(--g300);
 }
 
-.header:not([data-is-popup]), .container:not([data-is-popup]) {
+.header:not([data-is-popup]),
+.container:not([data-is-popup]) {
     border-radius: 0;
     background: transparent;
-    /*border-bottom: 1px solid var(--g400);*/
+
+    /* border-bottom: 1px solid var(--g400); */
 }
 
 .row {
@@ -47,20 +51,26 @@
     color: var(--frog-secondary);
 
     border-top-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 
     font-family: monospace;
-    font-size: .8rem;
+    font-size: 0.8rem;
 
-    padding: .6em 1em;
+    padding: 0.6em 1em;
+
+    outline: none !important;
+}
+
+.textbox::-webkit-input-placeholder {
+    color: var(--g500);
 }
 
 .flags {
     display: flex;
     flex-wrap: wrap;
-    gap: .5em;
+    gap: 0.5em;
     margin-top: 1em;
 }
 
@@ -68,17 +78,20 @@
     flex-grow: 1;
     display: inline-block;
     cursor: default;
-    padding: .75em;
+    padding: 0.75em;
     border-radius: 12px;
+
+    border: 1px solid transparent;
 }
 
 .flag:hover {
-    background: var(--g400);
+    background: var(--g250);
+    border-color: var(--g500);
 }
 
 .flag label {
-    font-size: .9rem;
-    margin-left: .5em;
+    font-size: 0.9rem;
+    margin-left: 0.5em;
 }
 
 .flag input {
@@ -88,7 +101,7 @@
 .flagDescription {
     display: block;
     font-size: 0.8em;
-    opacity: 0.5;
+    color: var(--g800);
 }
 
 .flagSet {
@@ -98,13 +111,13 @@
     flex-direction: column;
 
     width: 20em;
-    border-radius: .5em;
+    border-radius: 0.5em;
 }
 
 .flagSetName {
     cursor: default;
-    font-size: .8rem;
-    padding: .6em 1em;
-    padding-bottom: .2em;
-    opacity: 0.5;
+    font-size: 0.8rem;
+    padding: 0.6em 1em;
+    padding-bottom: 0.2em;
+    color: var(--g800);
 }
