Move from 'arch' to 'platform'

--- a/frontend/src/components/PlatformSelect/PlatformSelect.module.scss
+++ b/frontend/src/components/PlatformSelect/PlatformSelect.module.scss
@@ -7,7 +7,7 @@
     gap: 8px;
 }
 
-.arch {
+.platform {
     flex: 1;
 
     display: flex;
@@ -62,7 +62,7 @@
     font-weight: 500;
 }
 
-.archName {
+.platformName {
     font-size: 0.8em;
     opacity: 0.6;
 }
