--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -23,17 +23,8 @@
     scrollbar-width: thin;
 }
 
-.chooseACompiler {
-    display: flex;
-    flex-direction: column;
-}
-
-.chooseACompilerActions {
-    padding: 1em;
-    align-self: center;
-}
-
 .editor {
+    width: 100%;
     height: 100%;
 }
 
@@ -92,4 +83,8 @@
 .about {
     padding: 16px;
     max-width: 500px;
+}
+
+.settingsTab {
+    overflow: auto;
 }
