--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -84,6 +84,43 @@
     }
 }
 
+// DERIVED FROM .scratchName
+.trainingScratchHeaderContainer {
+    flex: 1;
+
+    &.completed {
+        background-color: green;
+    }
+}
+.trainingScratchHeader {
+    display: flex;
+    justify-content: center;
+    min-width: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    font-size: 32px;
+
+    color: var(--g1800);
+    text-overflow: ellipsis;
+
+    &.trainingScratchHeaderDescription {
+        font-size: 20px;
+        color: var(--g1400);
+        margin-bottom: 30px;
+    }
+}
+
+.trainingScratchButtonList {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
 .diffTab {
     display: flex;
     overflow: auto;
