--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -92,6 +92,13 @@
         background-color: green;
     }
 }
+.finishedContainer {
+    display: flex;
+    align-items: center;
+    margin-left: 7px;
+    font-size: 20px;
+    line-height: 32px;
+}
 .trainingScratchHeader {
     display: flex;
     justify-content: center;
@@ -109,7 +116,7 @@
     &.trainingScratchHeaderDescription {
         font-size: 20px;
         color: var(--g1400);
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
 }
 
