add line below diff header

--- a/frontend/src/components/Diff/Diff.module.css
+++ b/frontend/src/components/Diff/Diff.module.css
@@ -37,13 +37,16 @@
 }
 
 .header .column {
-    padding: 4px;
+    margin: 4px;
+    margin-bottom: 0;
+    padding-bottom: 4px;
+    border-bottom: 1px solid var(--a100);
 }
 
 .body {
     flex: 1;
     overflow: auto;
-    padding-bottom: 1em;
+    padding: 8px 0;
 }
 
 .lineNumber {
