fix linenumber positioning

--- a/frontend/src/components/Diff/Diff.module.css
+++ b/frontend/src/components/Diff/Diff.module.css
@@ -50,9 +50,12 @@
 }
 
 .lineNumber {
-    color: rgb(140, 140, 140);
-    font-size: 0.9em;
-    font-style: italic;
+    display: inline-block;
+
+    color: var(--a300);
+
+    min-width: 3ch;
+    text-align: right;
 }
 
 .immediate { color: #6d6dff; }
