improve diff layout

--- a/frontend/src/components/Diff/Diff.module.css
+++ b/frontend/src/components/Diff/Diff.module.css
@@ -11,36 +11,51 @@
 
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
     width: 100%;
     height: 100%;
+
+    overflow: auto;
 
     scrollbar-color: #fff3 transparent;
     scrollbar-width: thin;
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.column {
+    min-height: fit-content;
 }
 
-.column {
-    flex: 1;
-    min-width: 190px;
+.column:not(:last-child) {
+    border-right: 1px solid var(--a50);
+}
+
+.column:last-child {
+    flex-grow: 1;
+}
+
+.row {
     padding: 0 4px;
 }
 
 .header {
-    text-align: center;
+    display: block;
+    padding: 4px;
+
+    position: sticky;
+    top: 0;
+
+    color: var(--g1200);
+    user-select: none;
+    border-bottom: 1px solid var(--a50);
+
+    backdrop-filter: blur(10px);
 }
 
-.header .column {
-    margin: 4px;
-    margin-bottom: 0;
-    padding-bottom: 4px;
-    border-bottom: 1px solid var(--a100);
+@supports not (backdrop-filter: blur(10px)) {
+    .header {
+        background: var(--g200);
+    }
 }
 
 .body {
