platform icon in scratch toolbar
Fixes #209.

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -52,3 +52,21 @@
         }
     }
 }
+
+.icons {
+    flex-shrink: 0;
+
+    display: flex;
+    flex-direction: row;
+
+    height: 100%;
+    padding: 4px 0;
+
+    &:first-child {
+        padding-left: 8px;
+    }
+
+    svg {
+        height: 100%;
+    }
+}
