remove border-bottom from nav

--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -13,7 +13,7 @@
     padding: 4px;
 
     background: var(--g400);
-    border-bottom: 1px solid var(--g600);
+    //border-bottom: 1px solid var(--g600);
 
     font-size: 90%;
     font-weight: 600;
