--- a/frontend/src/components/Scratch/AboutScratch.module.scss
+++ b/frontend/src/components/Scratch/AboutScratch.module.scss
@@ -4,6 +4,7 @@
     gap: 1em;
     cursor: default;
 
+    min-width: 300px;
     height: 100%;
 }
 
@@ -97,4 +98,8 @@
     display: flex;
     flex-direction: inherit;
     flex: 1;
+}
+
+.signInPrompt {
+    margin-left: 16px;
 }
