--- a/frontend/src/pages/login.module.css
+++ b/frontend/src/pages/login.module.css
@@ -4,6 +4,8 @@
     align-content: center;
     height: 100%;
     cursor: default;
+
+    background: var(--g200);
 }
 
 .container p {
@@ -19,4 +21,13 @@
 
 .error {
     color: #f86;
+}
+
+.loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+
+    color: var(--g1100);
 }
