remove border-bottom from scratch toolbar

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -10,7 +10,7 @@
     padding: 4px;
 
     background: var(--g300);
-    border-bottom: 1px solid var(--a100);
+    //border-bottom: 1px solid var(--a100);
 
     @media screen and (min-width: 800px) and (min-height: 800px) {
         gap: 8px;
