nav user menu popup

--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -52,6 +52,7 @@ body {
     align-items: center;
     height: 100vh;
     overflow-x: hidden;
+    position: relative; // squashes react-laag warning
 }
 
 #layers {
