--- a/frontend/src/pages/settings/[tab].module.scss
+++ b/frontend/src/pages/settings/[tab].module.scss
@@ -13,10 +13,10 @@
 
     label {
         display: flex;
-        gap: .5em;
+        gap: 0.5em;
         align-items: center;
 
-        font-size: .9em;
+        font-size: 0.9em;
         color: var(--g1500);
     }
 }
