add platform logo to compileropts + give tab min width

--- a/frontend/src/components/Scratch/renderTabs.module.scss
+++ b/frontend/src/components/Scratch/renderTabs.module.scss
@@ -18,6 +18,10 @@
     overflow: auto;
 }
 
-.settings {
+.compilerOptsTab {
     overflow: auto;
+}
+
+.compilerOptsContainer {
+    min-width: 400px;
 }
