--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: initial;
+    justify-content: space-between;
 
     min-height: 43px; // SSR has no buttons
 
@@ -18,39 +18,43 @@
     }
 }
 
-.scratchName {
-    flex: 1;
-    min-width: 0;
-    height: 100%;
-    padding: 4px 8px;
+.left, .center, .right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
-    border: 1px solid transparent;
-    border-radius: 4px;
+    gap: 4px;
+
+    height: 100%;
+}
+
+.center {
+    flex-basis: 50%;
+    justify-content: center;
+}
+
+.left {
+    flex-basis: 25%;
+    justify-content: flex-start;
+}
+
+.right {
+    flex-basis: 25%;
+    justify-content: flex-end;
+}
+
+.name {
+    padding: 4px;
+
+    border: 0;
     background: transparent;
     outline: none !important;
 
+    font-size: 0.9em;
     color: var(--g1800);
 
     text-overflow: ellipsis;
-
-    transition: border-color 0.15s;
-
-    &::-webkit-input-placeholder {
-        color: var(--g1800);
-        transition: color 0.15s;
-    }
-
-    &:not(:disabled) {
-        &:hover,
-        &:active,
-        &:focus {
-            border-color: var(--g400);
-
-            &::-webkit-input-placeholder {
-                color: var(--g800);
-            }
-        }
-    }
+    text-align: center;
 }
 
 .icons {
@@ -69,4 +73,15 @@
     svg {
         height: 100%;
     }
+}
+
+.menuButton {
+    color: var(--g1400);
+    padding: 0 8px;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+
+    cursor: pointer;
 }
