scratch preferences modal

--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -71,3 +71,19 @@ main {
 .routerProgressBar {
     z-index: 999;
 }
+
+// dialog-polyfill
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+// for Safari
+dialog {
+    z-index: 1000;
+}
