--- a/frontend/src/components/Tabs.module.scss
+++ b/frontend/src/components/Tabs.module.scss
@@ -4,6 +4,10 @@
 
     flex: 1;
     height: 0;
+
+    &.vertical {
+        height: auto;
+    }
 }
 
 .tabButtons {
@@ -12,7 +16,14 @@
     white-space: nowrap;
     overflow-x: auto;
 
-    border-bottom: 1px solid var(--a100);
+    .border & {
+        border-bottom: 1px solid var(--a100);
+    }
+
+    .vertical & {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .tabButton {
@@ -65,6 +76,14 @@
         height: 2px;
 
         background: var(--a1000);
+
+        .vertical & {
+            width: 2px;
+            height: calc(100% - 16px);
+
+            left: 0;
+            bottom: 8px;
+        }
     }
 
     &:first-child {
@@ -74,6 +93,23 @@
     &:last-child {
         margin-right: 8px;
     }
+
+    &:focus-visible {
+        outline: none; // remove focus ring, .tabButtonsBackground replaces it
+    }
+
+    .vertical & {
+        display: flex;
+        justify-content: flex-start;
+
+        min-width: unset;
+        min-height: 32px;
+
+        margin-left: 0;
+        margin-right: 0;
+
+        padding: 0 16px;
+    }
 }
 
 .tabButtonsBackground {
@@ -82,9 +118,9 @@
     height: calc(100% - 16px);
     pointer-events: none;
 
-    transition: transform, width;
+    transition: transform, width, height;
 
-    // transform, width, transition-duration, opacity set by JS
+    // transform, width, height, transition-duration, opacity set by JS
 
     // must be separate element for a different transition-duration
     &::after {
@@ -100,6 +136,12 @@
 
         opacity: inherit;
         transition: opacity 0.1s;
+    }
+
+    .vertical & {
+        width: calc(100% - 16px);
+        height: 100%;
+        left: 8px;
     }
 }
 
@@ -118,3 +160,4 @@
     flex: 1;
     overflow: hidden;
 }
+
