--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -29,14 +29,20 @@
 }
 
 .center {
-    flex-basis: 50%;
     justify-content: center;
     overflow: hidden;
+
+    @media (min-width: 800px) {
+        flex-basis: 50%;
+    }
 }
 
 .left {
-    flex-basis: 25%;
     justify-content: flex-start;
+
+    @media (min-width: 800px) {
+        flex-basis: 25%;
+    }
 }
 
 .right {
