remove nav from scratch page

--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -18,7 +18,7 @@
     font-size: 90%;
     font-weight: 600;
 
-    @media screen and (min-width: 800px) and (min-height: 800px) {
+    @media screen and (min-height: 800px) {
         padding: 8px;
     }
 }
