scratch name cursor:text

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -73,6 +73,10 @@
 
     text-align: center;
 
+    &.editable {
+        cursor: text;
+    }
+
     &[contenteditable] {
         text-overflow: initial;
     }
