--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -21,7 +21,9 @@
     }
 }
 
-.left, .center, .right {
+.left,
+.center,
+.right {
     display: flex;
     flex-direction: row;
     align-items: center;
