don't use focus-visible
Unsupported on Safari

--- a/frontend/src/components/Tabs.module.scss
+++ b/frontend/src/components/Tabs.module.scss
@@ -97,7 +97,7 @@
         margin-right: 8px;
     }
 
-    &:focus-visible {
+    &:focus {
         outline: none; // remove focus ring, .tabButtonsBackground replaces it
     }
 
