show loading spinner in ButtonItems

--- a/frontend/src/components/VerticalMenu.module.scss
+++ b/frontend/src/components/VerticalMenu.module.scss
@@ -23,7 +23,8 @@ $padding: 6px;
 }
 
 .item {
-    display: block;
+    display: flex;
+    justify-content: space-between;
 
     padding: $padding 16px;
     text-overflow: ellipsis;
